优化流程